# your option) any later version.
#
# StarPU is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
# See the GNU Lesser General Public License in COPYING.LGPL for more details.
#

StarPU 1.4.0 (git revision xxxx)
==============================================
New features:
  * Possibility to specify different directories to store performance
    model files with new variable STARPU_PERF_MODEL_PATH
  * Checkpoint mechanism for MPI applications
  * Transaction support
  * OpenMP LLVM support
  * Driver for HIP-based GPUs.
  * Fault tolerance support with starpu_task_ft_failed().
  * Julia programming interface.
  * Add get_max_size method to data interfaces for applications using data with
    variable size to express their maximal potential size.
  * New offline tool to draw graph showing elapsed time between sent
    or received data and their use by tasks
  * Add 4D tensor data interface.
  * New sched_tasks.rec trace file which monitors task scheduling push/pop actions
  * New STARPU_MPI_MEM_THROTTLE environment variable to throttle mpi
    submission according to memory use.
  * New number_events.data trace file which monitors number of events in trace
    files. This file can be parsed by the new script
    starpu_fxt_number_events_to_names.py to convert event keys to event names.
  * New STARPU_PER_WORKER perfmodel.
  * Add energy accounting in the simgrid mode: starpu_energy_use() and
    starpu_energy_used().
  * New function starpu_mpi_get_thread_cpuid() to know where is bound the MPI
    thread.
  * New function starpu_get_pu_os_index() to convert logical index of a PU to
    its OS index.
  * New function starpu_get_hwloc_topology() to get the hwloc topology used by
    StarPU.
  * Add a task prefetch level, to improve retaining data in accelerators so we
    can make prefetch more aggressive.
  * Add starpu_data_dup_ro().