@@ -17,6 +17,9 @@
 StarPU 1.4.0 (git revision xxxx)
 ==============================================
 New features:
+  * Add a starpu_mpi_task_submit-oriented way of submitting MPI tasks
+    with functions starpu_mpi_task_exchange_data_before_execution() and
+    starpu_mpi_task_exchange_data_after_execution()
   * Possibility to specify different directories to store performance
     model files with new variable STARPU_PERF_MODEL_PATH
   * Checkpoint mechanism for MPI applications
